--- a/src/resources/css/editor.css
+++ b/src/resources/css/editor.css
@@ -32,6 +32,7 @@ html, body {
     font-size: 1em;
     outline: none;
     height: 100%;
-    width: 100%; }
+    width: 100%;
+    padding: 4px 8px; }
 
 /*# sourceMappingURL=editor.css.map */
