--- a/src/resources/css/editor.css
+++ b/src/resources/css/editor.css
@@ -12,27 +12,38 @@ html, body {
   .container .controls {
     flex-grow: 0;
     background-color: #eaeaea;
-    padding: 3px; }
+    padding: 2px;
+    position: relative;
+    height: 40px; }
     .container .controls button {
-      font-size: 1em;
-      margin: 5px;
-      text-transform: capitalize;
-      padding: 3px 10px; }
-    .container .controls button + button {
-      margin-left: 0; }
-    .container .controls button.btnPresent {
-      float: right; }
+      font-size: 2.5em;
+      margin: 3px 3px;
+      cursor: pointer;
+      background-color: #646464;
+      padding: 7px 10px;
+      border-radius: 5%;
+      color: #fafafa;
+      box-shadow: 1px 2px 2px rgba(100, 100, 100, 0.3);
+      position: relative;
+      z-index: 1;
+      border: none; }
+      .container .controls button i.material-icons {
+        font-size: inherit; }
+    .container .controls .btnPresent {
+      float: right;
+      font-size: 3em; }
   .container textarea {
     box-sizing: border-box;
     flex-grow: 1;
     overflow: scroll;
     resize: none;
     border: none;
-    border-left: 8px #eaeaea solid;
+    border-left: 10px #eaeaea solid;
     font-size: 1em;
     outline: none;
-    height: 100%;
+    height: calc(100% + 20px);
     width: 100%;
-    padding: 4px 8px; }
+    padding: 12px 3px 10px 10px;
+    position: relative; }
 
 /*# sourceMappingURL=editor.css.map */
