Hidden component, for content that shouldn't get rendered
Import components, comments and notes, and any other such statements to
come that should not be rendered. Quite simply, just display:nones
contents can, is not included when calculating the number of components
to navigate through, and is skipped when displaying.

--- a/src/presenter/components/import.html
+++ b/src/presenter/components/import.html
@@ -1,4 +1,5 @@
 <template id="import_template">
+  To hide this message, place the import statement inside a "hidden" statement
   <slot name="content">
 </template>
 
