Components can be styled using CSS Custom Properties
The components expose the styling of certain features using CSS Custom
Properties that the stylesheet can then override with custom values.

--- a/src/presenter/components/paragraph.html
+++ b/src/presenter/components/paragraph.html
@@ -11,11 +11,15 @@
     padding-right: 5vw;
   }
   p {
-    color: #1a1a1a;
-    font-family: "roboto", sans-serif;
-    font-weight: 300;
-    font-size: 3vw;
+    color: var(--font-color, #1a1a1a);
+    font-family: var(--font-family, "roboto", sans-serif);
+    font-weight: var(--font-weight, 300);
+    font-size: var(--font-size, 3vw);
     margin-bottom: 5vh;
+    background-color: var(--background-color);
+    border-radius: var(--border-radius);
+    box-shadow: var(--box-shadow);
+    padding: var(--padding);
   }
   </style>
   <div>
