--- a/src/presenter/components/itemize.html
+++ b/src/presenter/components/itemize.html
@@ -10,11 +10,11 @@
     padding-left: 10vw;
   }
   ::content li {
-    color: #1a1a1a;
-    font-family: "roboto", sans-serif;
-    font-weight: 300;
-    font-size: 3vw;
-    margin-bottom: 5vh;
+    color: var(--font-color, #1a1a1a);
+    font-family: var(--font-family,"roboto", sans-serif);
+    font-weight: var(--font-weight, 300);
+    font-size: var(--font-size, 3vw);
+    margin-bottom: var(--item-spacing, 5vh);
   }
   ::content pres-itemize, ::content pres-enumerate {
     position: initial;
