--- a/src/presenter/components/title.html
+++ b/src/presenter/components/title.html
@@ -14,10 +14,16 @@
     padding-left: 5vw;
   }
   h1 {
-    color: #1a1a1a;
-    font-family: "roboto", sans-serif;
-    font-weight: 300;
-    font-size: 15vh;
+    color: var(--font-color, #1a1a1a);
+    font-family: var(--font-family,"roboto", sans-serif);
+    font-weight: var(--font-weight, 300);
+    font-size: var(--font-size, 15vh);
+    padding: var(--padding);
+    background-color: var(--background-color);
+    box-shadow: var(--box-shadow);
+    border-radius: var(--border-radius);
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
   }
   </style>
   <div>
