Animations, Transitions, and Animated List Items
Using the styles to animate components, using “seen” and “coming”
states along with “showing” for leaf nodes, and “child-showing” and
“hidden” for parent nodes

--- a/src/presenter/components/itemize.html
+++ b/src/presenter/components/itemize.html
@@ -5,6 +5,7 @@
     top: 20vh;
     left: 0;
     right: 0;
+    transition: var(--transition-animation);
   }
   ::content ul {
     padding-left: 10vw;
