--- a/examples/themes/materialDesignInspired.css
+++ b/examples/themes/materialDesignInspired.css
@@ -3,12 +3,26 @@
   --padding: 1.5vw 2vw;
   --border-radius: .05vw;
   --box-shadow: 0 0.12vw 0.12vw 0 rgba(0, 0, 0, 0.14), 0 0.18vw 0.06vw -0.12vw rgba(0, 0, 0, 0.2), 0 0.06vw 0.3vw 0 rgba(0, 0, 0, 0.12);
+  --transition-animation: all 1s cubic-bezier(.4, 0, .2, 1);
 }
 
 #background {
   background-color: #f5f5f5;
 }
 
+pres-title {
+  --seen-transform: translateX(100vw);
+}
+
+pres-paragraph {
+  --coming-transform: translateY(-100vh);
+  --seen-transform: translateY(100vh);
+}
+
 pres-itemize {
   --item-spacing: 10vh;
+}
+
+pres-anim-li {
+  --seen-opacity: 0.3;
 }
