--- a/src/presenter/components/enumerate.html
+++ b/src/presenter/components/enumerate.html
@@ -5,6 +5,7 @@
     top: 20vh;
     left: 0;
     right: 0;
+    transition: var(--transition-animation);
   }
   ::content ol {
     padding-left: 10vw;
