Update MutationObserver and Slot mechanic
onContentChange API returns whole mutation, rather than just target.
Coupled with a change in how slots are handled, to support on
single-depth styling in V1 spec of Shadow DOM, components now render
correctly.

--- a/examples/themes/materialDesignInspired.css
+++ b/examples/themes/materialDesignInspired.css
@@ -19,10 +19,26 @@ pres-paragraph {
   --seen-transform: translateY(100vh);
 }
 
+
+/* LISTS */
+
 pres-itemize {
   --item-spacing: 10vh;
 }
 
 pres-anim-li {
   --seen-opacity: 0.3;
+}
+
+pres-itemize pres-itemize,
+pres-enumerate pres-itemize {
+  --list-style-type: circle;
+}
+
+pres-enumerate pres-enumerate {
+  --list-style-type: lower-latin;
+}
+
+pres-enumerate pres-enumerate pres-enumerate{
+  --list-style-type: upper-roman;
 }
