--- a/src/presenter/components/anim-li.html
+++ b/src/presenter/components/anim-li.html
@@ -18,7 +18,7 @@
   }
   </style>
   <div>
-    <li><slot name="content"></li>
+    <li><slot name="content_0"></slot></li>
   </div>
 </template>
 
