--- a/src/presenter/components/import.html
+++ b/src/presenter/components/import.html
@@ -1,22 +1,21 @@
 <template id="import_template">
   To hide this message, place the import statement inside a "hidden" statement
-  <slot name="content">
 </template>
 
 <script>
   formLinkTags = (component) => {
-    if(component.querySelector('div[slot="content"]') === null) {
-      const componentNames = component.querySelector('span[slot="content"]').getElementsByTagName("span")[0].innerText.split(",");
+    if(component.querySelector('div[slot="content_0"]') === null) {
+      const componentNames = component.querySelector('span[slot="content_0"]').getElementsByTagName("span")[0].innerText.split(",");
       linksHtml = "";
       componentNames.forEach((eachComponent) => {
         linksHtml += `<link rel="import" href="components/${eachComponent}.html" id="${eachComponent}_import">\n`;
       })
-      component.innerHTML = `<div slot="content">${linksHtml}</div>`;
+      component.innerHTML = `<div slot="content_0">\n${linksHtml}</div>`;
     }
   }
 
-  onContentChange = (component) => {
-    formLinkTags(component);
+  onContentChange = (mutation) => {
+    formLinkTags(mutation.target);
   }
 
   RegisterComponent("import", {
