--- a/src/presenter/components/googlemaps.html
+++ b/src/presenter/components/googlemaps.html
@@ -28,11 +28,13 @@
 
     const viewerContainer = component.shadowRoot.getElementById("viewerContainer");
 
-    if(component.childNodes.length == 2 && viewerContainer.getAttribute("loading") == "false") {
+    if(component.childNodes.length == 3 && viewerContainer.getAttribute("loading") == "false") {
       viewerContainer.setAttribute("loading", "true");
 
       const key = component.querySelector('span[slot="content_0"]').childNodes[0].innerText;
       const q = component.querySelector('span[slot="content_1"]').childNodes[0].innerText;
+      console.log(key);
+      console.log(q);
 
       const viewer = document.createElement('iframe');
       viewer.width = '100%';
