Section Component, with necessary alterations to other components
Title Components are now used to give sections titles,
MaterialDesignPresentation has been updated to reflect all of the
stylistic capabilities.

--- a/src/presenter/components/googlemaps.html
+++ b/src/presenter/components/googlemaps.html
@@ -9,6 +9,7 @@
     bottom: 0;
     transition: var(--transition-animation);
     padding: 1em;
+    background-color: transparent;
   }
   #viewerContainer {
     height: 100%;
