--- a/examples/themes/materialDesignInspired.css
+++ b/examples/themes/materialDesignInspired.css
@@ -3,21 +3,28 @@
   --padding: 1.5vw 2vw;
   --border-radius: .05vw;
   --box-shadow: 0 0.12vw 0.12vw 0 rgba(0, 0, 0, 0.14), 0 0.18vw 0.06vw -0.12vw rgba(0, 0, 0, 0.2), 0 0.06vw 0.3vw 0 rgba(0, 0, 0, 0.12);
-  --transition-animation: all 1s cubic-bezier(.4, 0, .2, 1);
+  --transition-duration: .8s;
+  --transition-animation: all var(--transition-duration) cubic-bezier(.4, 0, .2, 1);
   --font-family-monospace: "Roboto Mono";
+  --accent-color: #3CAA9C; /*#00BCD4;*/
+  --font-color: #616161;
 }
 
-#background {
-  background-color: #f5f5f5;
+pres-section {
+  --header-background-color: var(--accent-color);
+  --header-font-color: var(--background-color);
+  --header-padding-bottom: 10vh;
 }
 
 pres-title {
-  --seen-transform: translateX(100vw);
+  --backdrop-color: var(--accent-color);
+  --font-color: #fafafa;
+  --box-shadow: none;
+  --background-color: transparent;
 }
 
 pres-paragraph {
-  --coming-transform: translateY(-100vh);
-  --seen-transform: translateY(100vh);
+  --seen-transform: translateX(100vh);
 }
 
 pres-code-java {
