--- a/src/presenter/components/image.html
+++ b/src/presenter/components/image.html
@@ -9,6 +9,7 @@
     bottom: 0;
     transition: var(--transition-animation);
     padding: 1em;
+    background-color: transparent;
   }
   #imageContainer {
     height: 100%;
