--- a/src/presenter/components/title.html
+++ b/src/presenter/components/title.html
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    background-color: var(--backdrop-color, #f5f5f5);
     transition: var(--transition-animation);
   }
   :host([displaying="coming"]) h1 {
@@ -22,7 +23,7 @@
   }
   h1 {
     color: var(--font-color, #1a1a1a);
-    font-family: var(--font-family,"roboto", sans-serif);
+    font-family: var(--font-family, "roboto", sans-serif);
     font-weight: var(--font-weight, 300);
     font-size: var(--font-size, 15vh);
     padding: var(--padding);
