--- a/src/editor/resources/css/editor.css
+++ b/src/editor/resources/css/editor.css
@@ -21,9 +21,9 @@ html, body {
       cursor: pointer;
       background-color: #646464;
       padding: 7px 10px;
-      border-radius: 5%;
+      border-radius: 2px;
       color: #fafafa;
-      box-shadow: 1px 2px 2px rgba(100, 100, 100, 0.3);
+      box-shadow: 0 0.12vw 0.12vw 0 rgba(0, 0, 0, 0.14), 0 0.18vw 0.06vw -0.12vw rgba(0, 0, 0, 0.2), 0 0.06vw 0.3vw 0 rgba(0, 0, 0, 0.12);
       position: relative;
       z-index: 1;
       border: none; }
@@ -46,4 +46,21 @@ html, body {
     padding: 12px 3px 10px 10px;
     position: relative; }
 
-/*# sourceMappingURL=editor.css.map */
+.footer {
+  position: fixed;
+  bottom: 0; }
+  .footer .toast {
+    margin: 6px;
+    background-color: #646464;
+    font-family: sans-serif;
+    padding: 9px 11px;
+    border-radius: 2px;
+    color: #fafafa;
+    box-shadow: 0 0.12vw 0.12vw 0 rgba(0, 0, 0, 0.14), 0 0.18vw 0.06vw -0.12vw rgba(0, 0, 0, 0.2), 0 0.06vw 0.3vw 0 rgba(0, 0, 0, 0.12);
+    max-width: calc(100vw - 32px);
+    font-size: 1.2em;
+    line-height: 1.3;
+    transition: all 0.5s cubic-bezier(0.4, 0, 0.2, 1), color 0.5s 0.1s cubic-bezier(0.4, 0, 0.2, 1); }
+    .footer .toast.toast-hidden {
+      transform: translateY(42px);
+      color: #646464; }
