--- a/src/editor/resources/sass/editor.sass
+++ b/src/editor/resources/sass/editor.sass
@@ -1,3 +1,10 @@
+$box-shadow: 0 0.12vw 0.12vw 0 rgba(0, 0, 0, 0.14), 0 0.18vw 0.06vw -0.12vw rgba(0, 0, 0, 0.2), 0 0.06vw 0.3vw 0 rgba(0, 0, 0, 0.12)
+$accent-grey: #646464
+$background-grey: #eaeaea
+$text-white: #fafafa
+$border-radius: 2px
+$transition-function: cubic-bezier(.4, 0, .2, 1)
+
 html, body
   margin: 0
   height: 100%
@@ -12,7 +19,7 @@ html, body
 
   .controls
     flex-grow: 0
-    background-color: #eaeaea
+    background-color: $background-grey
     padding: 2px
     position: relative
     height: 40px
@@ -21,11 +28,11 @@ html, body
       font-size: 2.5em
       margin: 3px 3px
       cursor: pointer
-      background-color: rgb(100,100,100)
+      background-color: $accent-grey
       padding: 7px 10px
-      border-radius: 5%
-      color: #fafafa
-      box-shadow: 1px 2px 2px rgba(100,100,100,0.3)
+      border-radius: $border-radius
+      color: $text-white
+      box-shadow: $box-shadow
       position: relative
       z-index: 1
       border: none
@@ -43,10 +50,31 @@ html, body
     overflow: scroll
     resize: none
     border: none
-    border-left: 10px #eaeaea solid
+    border-left: 10px $background-grey solid
     font-size: 1em
     outline: none
     height: calc(100% + 20px)
     width: 100%
     padding: 12px 3px 10px 10px
     position: relative
+
+.footer
+  position: fixed
+  bottom: 0
+
+  .toast
+    margin: 6px
+    background-color: $accent-grey
+    font-family: sans-serif
+    padding: 9px 11px
+    border-radius: $border-radius
+    color: $text-white
+    box-shadow: $box-shadow
+    max-width: calc(100vw - 32px)
+    font-size: 1.2em
+    line-height: 1.3
+    transition: all 0.5s $transition-function, color 0.5s 0.1s $transition-function
+
+    &.toast-hidden
+      transform: translateY(42px)
+      color: $accent-grey
